@@ -39,8 +39,8 @@
             <label name="record_number"/>
             <field name="record_number"/>
             <!-- Received -->
-            <label name="invoice_count"/>
-            <field name="invoice_count"/>
+            <label name="received_invoice_count"/>
+            <field name="received_invoice_count"/>
             <label name="record_count"/>
             <field name="record_count"/>
             <label name="first_invoice_number"/>
